--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Hola</h1>
     <h2>Hola mi nombre es jhoan</h2>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere aliquam voluptatibus natus id iusto commodi quae quos officiis vel pariatur?</p>
+
+    <img src="" alt="imagen de jhoan">
+
 </body>
 </html>
